exports[`borderColor properly applies a value when passed only one 1`] = `
Object {
  "borderBottomColor": "red",
  "borderLeftColor": "red",
  "borderRightColor": "red",
  "borderTopColor": "red",
}
`;

exports[`borderColor properly applies values when passed four 1`] = `
Object {
  "borderBottomColor": "green",
  "borderLeftColor": "yellow",
  "borderRightColor": "blue",
  "borderTopColor": "red",
}
`;

exports[`borderColor properly applies values when passed three 1`] = `
Object {
  "borderBottomColor": "green",
  "borderLeftColor": "blue",
  "borderRightColor": "blue",
  "borderTopColor": "red",
}
`;

exports[`borderColor properly applies values when passed two 1`] = `
Object {
  "borderBottomColor": "red",
  "borderLeftColor": "blue",
  "borderRightColor": "blue",
  "borderTopColor": "red",
}
`;
